--- a/software/DynamicExtentions/conf/DynamicExtensions.properties
+++ b/software/DynamicExtentions/conf/DynamicExtensions.properties
@@ -4,8 +4,8 @@ jboss.server.port=28080
 database.type=oracle
 
 DynamicExtensions.jar.details = Dynamic Extensions
-DynamicExtensions.jar.version = 1.5.2.w8.i6-SNAPSHOT
-DynamicExtensions.jar.date = 13-Mar-2012
+DynamicExtensions.jar.version = 1.0-BRISSKIT-SNAPSHOT
+DynamicExtensions.jar.date = 19-Apr-2012
 ncimvn.nexus.user.name=
 ncimvn.nexus.user.password=
 
