--- a/software/DynamicExtentions/src/java/DynamicExtension.properties
+++ b/software/DynamicExtentions/src/java/DynamicExtension.properties
@@ -1,7 +1,7 @@
 #these properties are required for DynamicExtensionDAO.java
 app.name=dynamicExtention
-jboss.server.host=@@jboss.server.host@@
+jboss.server.host=localhost
 jboss.secure=@@jboss.secure@@
-jboss.server.port=@@jboss.server.port@@
-Application.url=@@Application.url@@
+jboss.server.port=8080
+Application.url=http://localhost:8080/
 default.prifix.war=@@default.prifix.war@@
