--- a/software/DynamicExtentions/build.xml
+++ b/software/DynamicExtentions/build.xml
@@ -10,6 +10,8 @@
 	<import file="./binaries/DEDeploy.xml" />
 	<property name="base.dir" value="." />
 	<property name="src.dir" value="src/java" />
+	<property name="js.dir" value="src/web/javascripts"/>
+	<property name="dhtmlx.js.dir" value="src/web/dhtmlx_suite/js"/>
 	<property name="test.dir" value="test" />
 	<property name="target.dir" value="binaries/classes" />
 	<property name="lib.dir" value="${base.dir}/lib/server" />
@@ -84,6 +86,10 @@
 			<pathelement location="${extra_lib.dir}/ant-contrib.jar" />
 		</classpath>
 	</taskdef>
+	
+	<taskdef name="jscomp" classname="com.google.javascript.jscomp.ant.CompileTask"
+           classpath="${extra_lib.dir}/compiler.jar"/>
+
 
 	<!-- sub tasks -->
 	<target name="init">
@@ -99,11 +105,12 @@
 	</target>
 
 	<!-- Compile all files, generated and hand-written -->
-	<target name="compile" depends="init">
+	<target name="compile" depends="init,merge_js">
 		<javac destdir="${target.dir}" includes="**/*.*" includeAntRuntime="false" debug="true">
 			<src path="${src.dir}" />
 			<classpath refid="app.classpath" />
 		</javac>
+
 		<copy todir="${target.dir}">
 			<fileset dir="${src.dir}">
 				<include name="**/*.properties" />
@@ -134,7 +141,35 @@
 	</target>
 
 
-	
+	<target name="merge_js">
+		<jscomp 
+			compilationLevel="simple" 
+			debug="false"
+			output="${js.dir}/all_de.js">
+			
+			<sources dir="${dhtmlx.js.dir}">
+				<file name="dhtmlxcommon.js"/>
+				<file name="dhtmlxcalendar.js"/>
+			</sources>
+			<sources dir="${js.dir}">
+				<file name="prototype.js"/>
+				<file name="jquery-1.3.2.js"/>
+				<file name="calendarComponent.js"/>
+				<file name="script.js"/>
+				<file name="form_plugin.js"/>
+				<file name="dynamicExtensions.js"/>
+				<file name="overlib_mini.js"/>
+				<file name="calender.js"/>
+				<file name="ajax.js"/>
+				<file name="scr.js"/>
+				<file name="ext-base.js"/>
+				<file name="ext-all.js"/>
+				<file name="combos.js"/>
+				<file name="ajaxupload.js"/>
+				<file name="de.js"/>
+			</sources>
+		</jscomp>
+	</target>
 
 
 	<!-- Create dynamic extensions jar Begins-->
