BO reported records loaded successfully, but data in not visible in UI nor available in export-form-data https://cbmiapps.wustl.edu/jira/browse/CLINPORTAL-6187
SVN-Revision: 28801

--- a/software/DynamicExtentions/src/java/ApplicationResources.properties
+++ b/software/DynamicExtentions/src/java/ApplicationResources.properties
@@ -348,6 +348,7 @@ dynExtn.validation.radio.NoPV At least one permissible value for Option Button
 dynExtn.validation.listCombo.NoPV At least one permissible value for List/ComboBox
 dynExtn.validation.AbstractValidator Data is present in {0}, Non-abstract form cannot be changed to abstract.
 dynExtn.validation.NonAbstractValidator Data entry exists for at least one child of {0}, hence cannot make it non-abstract.
+dynExtn.validation.empty.form Form with no data cannot be inserted.
 #rule
 eav.rule.range Accept Values (Includes Min. & Max. Values)
 eav.rule.required Make this Attribute Mandatory
